Closed Bug 373293 Opened 17 years ago Closed 17 years ago

Style attribute is "transparent;" (missing property name)

Categories

(Core :: CSS Parsing and Computation, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jruderman)

References

Details

(Keywords: regression, testcase)

Attachments

(3 files)

Attached file testcase
      No description provided.
Attached patch patchSplinter Review
Attachment #257944 - Flags: superreview?(dbaron)
Attachment #257944 - Flags: review?(dbaron)
Comment on attachment 257944 [details] [diff] [review]
patch

Oops.

(Append functions are horrible APIs as far as usability goes.  They're just faster...)
Attachment #257944 - Flags: superreview?(dbaron)
Attachment #257944 - Flags: superreview+
Attachment #257944 - Flags: review?(dbaron)
Attachment #257944 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Attached patch Mochitest v1Splinter Review
Possible Mochitest for this bug.
Attachment #258240 - Flags: review?(dbaron)
Comment on attachment 258240 [details] [diff] [review]
Mochitest v1

Sure, r=dbaron.
Attachment #258240 - Flags: review?(dbaron) → review+
Whiteboard: [checkin needed]
Checked in the mochitest:
mozilla/layout/style/test/Makefile.in          1.4
mozilla/layout/style/test/test_bug373293.html  1.1
Flags: in-testsuite? → in-testsuite+
Whiteboard: [checkin needed]
Blocks: refdyn
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: