Fix bug 373293, Style attribute is "transparent;" (missing property name).  r+sr=dbaron